cmake_minimum_required(VERSION 3.13)
set(CMAKE_CXX_STANDARD 17)
project(CPP_Learning VERSION 1.0)
message(STATUS "start running cmake...")

#set(Boost_INCLUDE_DIR C:\\Program Files\\boost\\boost_1_60_0)
#set(Boost_LIBRARY_DIR C:\\Program Files\\boost\\boost_1_60_0\\lib)
#find_package(Boost COMPONENTS system filesystem REQUIRED)
##find_package(Boost 1.60.0)
#if (Boost_FOUND)
#    message(STATUS "Boost_INCLUDE_DIRS: ${Boost_INCLUDE_DIRS}")
#    message(STATUS "Boost_LIBRARIES: ${Boost_LIBRARIES}")
#    message(STATUS "Boost_VERSION: ${Boost_VERSION}")
#    include_directories(${Boost_INCLUDE_DIRS})
#endif ()

add_executable(CPP_Learning ch18/rvref.cpp)
#if (Boost_FOUND)
#    target_link_libraries(CPP_Learning ${Boost_LIBRARIES})
#endif ()